--- a/main.html
+++ b/main.html
@@ -22,13 +22,49 @@
     </nav>
 
     <main>
-        <h2 align="center">일정등록</h2>
+        <h2 align="center">미용 예약 신청</h2>
         <form name="fm" action="" method="post">
         <table border="1" align="center">
                 <tr>
-                    <td align="center" width=400> 일정번호(자동번호)</td>
-                    <td width=200> <input type="text" name="do_code"></td>
+                    <td>일련번호</td>
+                    <td> <input type="text" name="sn"> </td>
                 </tr>
+                <tr>
+                    <td>아이디</td>
+                    <td> <input type="text" name="id"> </td>
+                </tr>
+                <tr>
+                    <td>미용번호</td>
+                    <td> <select name="hair_num">
+                                    <option value="24001">24001</option>
+                                    <option value="24001">24002</option>
+                                    <option value="24001">24003</option>
+                                    <option value="24001">24004</option>
+                                    <option value="24001">24005</option>
+                        </select> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>미용명</td>
+                    <td> <select name="hair_name">
+                                    <option value="남성컷트">남성컷트</option>
+                                    <option value="여성컷트">여성컷트</option>
+                                    <option value="남성염색">남성염색</option>
+                                    <option value="여성염색">여성염색</option>
+                                    <option value="퍼머">퍼머</option>
+                        </select> 
+                    </td>
+                </tr>
+                <tr>
+                    <td>미용요금</td>
+                    <td> <input type="number" name="cost"> </td>
+                </tr>
+                <tr>
+                    <td>미용예약일</td>
+                    <td> <input type="number" name="cost"> </td>
+                </tr>
+                
+
         </table>
         </form>
     </main>
