--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<%@ page language="java" contentType="text/html; charset=UTF-8"
+    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -16,9 +18,9 @@
         <ul>
             <li><a href="#">카테고리 1</a></li>
             <li><a href="#">카테고리 2</a></li>
-            <li><a href="main.html">카테고리 3</a></li>
+            <li><a href="main.jsp">카테고리 3</a></li>
             <li><a href="#">카테고리 4</a></li>
-            <li><a href="index.html">카테고리 5</a></li>
+            <li><a href="index.jsp">카테고리 5</a></li>
         </ul>
     </nav>
 
@@ -37,4 +39,5 @@
 
     <script src="all.js"></script>
 </body>
+
 </html>
