--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <ul>
             <li><a href="#">카테고리 1</a></li>
             <li><a href="#">카테고리 2</a></li>
-            <li><a href="main.jsp">카테고리 3</a></li>
-            <li><a href="#">카테고리 4</a></li>
-            <li><a href="index.jsp">카테고리 5</a></li>
+            <li><a href="main.jsp">미용 예약 신청</a></li>
+            <li><a href="save.jsp">미용 예약 기록 저장</a></li>
+            <li><a href="index.jsp">메인 화면</a></li>
         </ul>
     </nav>
 
     <main>
-        <h2>미용 메인 화면</h2>
+    	<h1>미용 메인 화면</h1>
         <ul style="list-style-type: circle; padding-left: 20px;">
             <li>첫 번째 항목</li>
             <li>두 번째 항목</li>
@@ -39,5 +39,4 @@
 
     <script src="all.js"></script>
 </body>
-
 </html>
