--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
+
     <header>
         <h1>My Website</h1>
     </header>
@@ -24,69 +25,18 @@
     </nav>
 
     <main>
-        <h2 align="center">미용 예약 신청</h2>
-        <form name="fm" action="" method="post">
-        <table border="1" align="center">
-                <tr>
-                    <td>일련번호</td>
-                    <td> <input type="text" name="sn"> </td>
-                </tr>
-                <tr>
-                    <td>아이디</td>
-                    <td> <input type="text" name="id"> </td>
-                </tr>
-                <tr>
-                    <td>미용번호</td>
-                    <td> <select name="hair_num">
-                                    <option value="24001">24001</option>
-                                    <option value="24002">24002</option>
-                                    <option value="24003">24003</option>
-                                    <option value="24004">24004</option>
-                                    <option value="24005">24005</option>
-                        </select> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>미용명</td>
-                    <td> <select name="hair_name">
-                                    <option value="남성컷트">남성컷트</option>
-                                    <option value="여성컷트">여성컷트</option>
-                                    <option value="남성염색">남성염색</option>
-                                    <option value="여성염색">여성염색</option>
-                                    <option value="퍼머">퍼머</option>
-                        </select> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>미용요금</td>
-                    <td> <input type="number" name="cost"> </td>
-                </tr>
-                <tr>
-                    <td>미용예약일</td>
-                    <td> <input type="text" name="reg_day"> </td>
-                </tr>
-                <tr>
-                    <td>결제방법</td>
-                    <td> <select name="pay_name">
-                                    <option value="1">현금</option>
-                                    <option value="2">계좌이체</option>
-                                    <option value="3">신용카드</option>
-                        </select> 
-                    </td>
-                </tr>
-                <tr>
-                	<td colspan=2 align="center">
-                		<input type="submit" value="예약하기">
-                		<input type="reset" value="다시쓰기">
-                	</td>           	
-                </tr>
-        </table>
+    	<h1>미용 메인 화면</h1>
+        <ul style="list-style-type: circle; padding-left: 20px;">
+            <li>첫 번째 항목</li>
+            <li>두 번째 항목</li>
+            <li>세 번째 항목</li>
+        </ul>
     </main>
-    
+
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
-    
+
     <script src="all.js"></script>
 </body>
 </html>
