--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
         <ul>
             <li><a href="#">카테고리 1</a></li>
             <li><a href="#">카테고리 2</a></li>
-            <li><a href="main.jsp">카테고리 3</a></li>
-            <li><a href="#">카테고리 4</a></li>
-            <li><a href="index.jsp">카테고리 5</a></li>
+            <li><a href="main.jsp">미용 예약 신청</a></li>
+            <li><a href="save.jsp">미용 예약 기록 저장</a></li>
+            <li><a href="index.jsp">메인 화면</a></li>
         </ul>
     </nav>
 
@@ -81,7 +81,12 @@
                 	</td>           	
                 </tr>
         </table>
-        </form>
     </main>
+    
+    <footer>
+        <p>&copy; 2025 My Website. All rights reserved.</p>
+    </footer>
+    
+    <script src="all.js"></script>
 </body>
 </html>
