--- a/main.html
+++ b/main.html
@@ -1,19 +1,19 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>헤더와 푸터가 있는 페이지</title>
-    <link rel="stylesheet" href="all.css">
+<meta charset="UTF-8">
+<title>미용예악</title>
+<link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <header>
-        <h1>My Website</h1>
-    </header>
 
-    <nav class="category-nav">
+<header>
+	<h1>수행평가</h1>
+</header>
+
+<nav class="category-nav">
         <ul>
             <li><a href="#">카테고리 1</a></li>
             <li><a href="#">카테고리 2</a></li>
@@ -21,72 +21,56 @@
             <li><a href="save.jsp">미용 예약 기록 저장</a></li>
             <li><a href="index.jsp">메인 화면</a></li>
         </ul>
-    </nav>
+</nav>
 
-    <main>
-        <h2 align="center">미용 예약 신청</h2>
-        <form name="fm" action="" method="post">
-        <table border="1" align="center">
-                <tr>
-                    <td>일련번호</td>
-                    <td> <input type="text" name="sn"> </td>
-                </tr>
-                <tr>
-                    <td>아이디</td>
-                    <td> <input type="text" name="id"> </td>
-                </tr>
-                <tr>
-                    <td>미용번호</td>
-                    <td> <select name="hair_num">
-                                    <option value="24001">24001</option>
-                                    <option value="24002">24002</option>
-                                    <option value="24003">24003</option>
-                                    <option value="24004">24004</option>
-                                    <option value="24005">24005</option>
-                        </select> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>미용명</td>
-                    <td> <select name="hair_name">
-                                    <option value="남성컷트">남성컷트</option>
-                                    <option value="여성컷트">여성컷트</option>
-                                    <option value="남성염색">남성염색</option>
-                                    <option value="여성염색">여성염색</option>
-                                    <option value="퍼머">퍼머</option>
-                        </select> 
-                    </td>
-                </tr>
-                <tr>
-                    <td>미용요금</td>
-                    <td> <input type="number" name="cost"> </td>
-                </tr>
-                <tr>
-                    <td>미용예약일</td>
-                    <td> <input type="text" name="reg_day"> </td>
-                </tr>
-                <tr>
-                    <td>결제방법</td>
-                    <td> <select name="pay_name">
-                                    <option value="1">현금</option>
-                                    <option value="2">계좌이체</option>
-                                    <option value="3">신용카드</option>
-                        </select> 
-                    </td>
-                </tr>
-                <tr>
-                	<td colspan=2 align="center">
-                		<input type="submit" value="예약하기">
-                		<input type="reset" value="다시쓰기">
-                	</td>           	
-                </tr>
-        </table>
-    </main>
-    
-    <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
-    </footer>
-    
-    <script src="all.js"></script>
+<script type="text/javascript" src="check.js"></script>
+
+<h3 align="center">미용 예약 신청</h3>
+<form name="frm" action="" method="post">
+<table border="1" align="center">
+	<tr>
+		<td align="center">일련번호</td>
+		<td> <input type="text" name="sn"></td>
+	</tr>
+	<tr>
+		<td align="center">아이디</td>
+		<td> <input type="text" name="id"></td>
+	</tr>
+	<tr>
+		<td align="center">미용번호</td>
+		<td><select name="hair_num" >
+						<option value="남성컷트">남성컷트</option>
+						<option value="여성컷트">여성컷트</option>
+						<option value="남성염색">남성염색</option>
+						<option value="여성염색">여성염색</option>
+						<option value="퍼머">퍼머</option>
+			</select>
+		</td>
+	</tr>
+	<tr>
+		<td align="center"> 일정메모</td>
+		<td> <input type="number" name="cost"></td>
+	</tr>
+	<tr>
+		<td align="center">미용예약일		</td>
+		<td><input type="text" name="reg_day"></td>
+	</tr>
+	<tr>
+		<td align="center">결제방법</td>
+		<td><select name="pay_num">
+						<option value="1">현금</option>
+						<option value="2">게좌이체</option>
+						<option value="3">신용카드</option>	
+			</select>
+		</td>
+	</tr>
+	<tr>
+		<td colspan="2" align="center">
+				<input type="submit" value="예약하기" onclick="return chk();">
+				<input type="reset" value="다시쓰기"></td>
+	</tr>
+</table>
+</form>
+<footer><p>&copy; 2025 My Website. All rights reserved.</p></footer>
 </body>
 </html>
